<resources>
    <string name="app_name">My Books</string>
    <string name="title_activity_huidig_books">MY Books</string>
    <string name="titleHuidigBooks">Huidige Boeken</string>
    <string name="titleToekomestigeBoeken">Toekomestige Boeken</string>
    <string name="titleboekentoevoegen">Boeken Toevoegn</string>
    <string name="titleToekomstigboekentoevoegen">Toekomstig Boeken Toevoegn</string>
    <string name="placeHolderInput">Type de naam van het Boek</string>
    <string name="quistion">Klik de button hieronder om het boek toe te voegen</string>
    <string name="buttenHuidigeBoeken">Huidige Boeken</string>
    <string name="buttonToekomsitgeBoeken">Toekomsitge Boeken</string>
    <string name="title_activity_toekomstig_boeken">ToekomstigBoekenActivity</string>
    <string name="action_Toekomstig">Toekomsitg Boekn</string>
    <string name="action_Huidig">Huidig Boeken</string>
    <string name="action_settings">Delete</string>
    <string name="btn_update">save</string>
    <string name="Title_update_Huidig">Update Huidig Boek</string>
    <string name="Title_update_Toekomstig">Update Toekomstig Boek</string>
    <string name="Text_Update">Klik de button hieronder om het boek op te slaan</string>

</resources>
