<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mybooks.BoekenToevogenActivity">
    <item
        android:id="@+id/action_settings_toekomstig"
        android:orderInCategory="100"
        android:title="@string/action_Toekomstig"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings_Huidig"
        android:orderInCategory="100"
        android:title="@string/action_Huidig"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_Books_list"
        android:icon="@drawable/ic_delete_white"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>