<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoekenToevoegenToekomstig">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="347dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:text="@string/titleToekomstigboekentoevoegen"
        android:textAlignment="center"
        android:textColor="#020000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="387dp"
        android:layout_height="88dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddToekomstigBoek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeHolderInput"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Quistion"
        android:layout_width="378dp"
        android:layout_height="64dp"
        android:layout_marginTop="252dp"
        android:layout_marginBottom="21dp"
        android:text="@string/quistion"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btToekomstig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/btToekomstig"
        android:layout_width="289dp"
        android:layout_height="72dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="62dp"
        android:text="@string/buttonToekomsitgeBoeken"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Quistion"
        app:layout_constraintVertical_bias="0.567" />

</androidx.constraintlayout.widget.ConstraintLayout>