<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund"
    tools:context=".UpdateToekomstigActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="85dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/background_layout_titels"
        android:text="@string/Title_update_Toekomstig"
        android:textAlignment="center"
        android:textColor="#F5EFEF"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="387dp"
        android:layout_height="88dp"
        android:layout_marginTop="144dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUpdateToekomstigBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeHolderInput"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="378dp"
        android:layout_height="64dp"
        android:layout_marginTop="104dp"
        android:text="@string/Text_Update"
        android:textAlignment="center"
        android:textColor="#F8F5F5"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/btUpdateToekomstig"
        android:layout_width="289dp"
        android:layout_height="72dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/background_buttens"
        android:text="@string/btn_update"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.443" />

</androidx.constraintlayout.widget.ConstraintLayout>